--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,7 @@
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_marginTop="80dp"
+        android:text="admin"
         android:textColor="@color/text_color_grey0"
         android:textSize="@dimen/text_size_normal"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -52,6 +53,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
         android:inputType="textPassword"
+        android:text="admin"
         android:textColor="@color/text_color_grey0"
         android:textSize="@dimen/text_size_normal"
         app:layout_constraintHorizontal_chainStyle="packed"
